# emachines

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONVERSION_CHECKLIST.txt  Dockerfile  FINAL_PROJECT_STATUS.md  GUIDELINES.md  MAGNETICS_CONVERSION_SUMMARY.md  MAGNETICS_PROJECT_STATUS.md  MAGNETICS_REORGANIZATION_COMPLETE.md  MAGNETICS_SPLIT_NOTEBOOKS_VERIFIED.md  MEC_MODULE_CONVERSION_COMPLETE.md  MOTORS_SPLIT_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.txt  SESSION_FIX_SUMMARY.md  SETUP.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
emachines/: __init__.py  _modidx.py  test_verify.py
emachines/magnetics/: __init__.py  electrical_steel.py  iron_loss.py  magnetics.py  pm_materials.py
emachines/mec/: __init__.py  material.py  mec.py  result.py  solver.py
emachines/motors/: __init__.py  dc_motor.py  motors.py  pmsm.py
emachines/winding/: __init__.py  factors.py  sos.py
nbs/: 00_template.ipynb  01_winding.ipynb  02_dc_motors.ipynb  02_motors.ipynb  02_pmsm.ipynb  03_bh_models.ipynb  03_electrical_steel.ipynb  03_iron_loss.ipynb  03_pm_materials.ipynb  04_material_models.ipynb  04_mec_solver.ipynb  04_results.ipynb  test_verify.ipynb
tests/: test_electrical_steel.py  test_iron_loss.py  test_mec.py  test_pmsm.py  test_sos.py  test_winding.py
